<resources>
    <string name="app_name">ProgressIt!</string>

    <string name="google_log_in">Continue with Google</string>

    //Login
    <string name="email">Email Address</string>
    <string name="pass">Password</string>
    <string name="pass_repeat">Repeat Password</string>
    <string name="login">SignIn</string>
    <string name="login_with">or continue with:</string>
    <string name="signup">Signup</string>
    <string name="user_registered">"You are already registered. \nPlease, SignIn"</string>
    <string name="warn_email">"Enter the correct address"</string>
    <string name="warn_pass">"Weak password"</string>
    <string name="warn_pass_repeat">"Passwords must be the same"</string>
    <string name="warn_email_or_pass">"Incorrect Email or Password"</string>
    <string name="warn_username">"Username cannot be empty"</string>
    <string name="warn_descr">"Description cannot be empty"</string>

    <string name="username">"Username"</string>
    <string name="birth_date">"Enter your birth date:"</string>
    <string name="description">"Describe yourself:"</string>
    <string name="description_hint">"Describe your personality traits, habits, lifestyle"</string>
    <string name="username_comeup">"Come up with a new username:"</string>
    <string name="user_one_more_step">"Just one more step..."</string>

    // Navigation
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_signout">SignOut</string>

    <string name="menu_home">Your Goals</string>
    <string name="menu_gallery">Realized Goals</string>
    <string name="add_new_goal">Add or Edit a Goal</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_nav_main">NavMainActivity</string>
    <string name="title_fragment_home">asd</string>
    // Goals
    <string name="descr_goal">What\'s your goal?</string>
    <string name="descr_goal_hint">Describe your goal here</string>
    <string name="goal_repeatable">Is your goal repeatable?</string>
    <string name="repeatable">Repeatable</string>
    <string name="not_repeatable">Not Repeatable</string>
    <string name="what_deadline">What the deadline?</string>
    <string name="date_missing">Date is missing</string>
    <string name="descr_missing">Write your goal first</string>
    <string name="goal_deleted">The goal has been deleted</string>
    <string name="sub_goal_default">Enter the subtask here</string>
    <string name="sub_goal_add">+ Add a new subgoal</string>
    <string name="goal_here">Goal here</string>
    <string name="here_is_your_goal">Here is Your Goal</string>
    <string name="analizing">Waiting for response…</string>

    //ChatGpt prompts
    <string name="main_prompt">You are an assistant in an android application, a personal achievement planner, and you should respond with tips on how to achieve this achievement for the user, also, after the tips, provide a small analysis of how achieving this goal will affect the user\'s life.</string>
    <string name="main_prompt2">You must answer in the language in which the Goal is written. Also take into account the task\'s deadline, and its recurrence The Goal is: </string>


</resources>