<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sendit.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_addGoalFragment"
            app:destination="@id/addGoalFragment"
            app:popUpTo="@id/addGoalFragment"/>
        <action
            android:id="@+id/action_nav_home_to_descriptionGoalFragment"
            app:destination="@id/descriptionGoalFragment"
            app:popUpTo="@id/descriptionGoalFragment"/>
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.sendit.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/addGoalFragment"
        android:name="com.example.sendit.ui.home.AddGoalFragment"
        android:label="@string/add_new_goal"
        tools:layout="@layout/fragment_add_goal" />
    <fragment
        android:id="@+id/descriptionGoalFragment"
        android:name="com.example.sendit.ui.DescriptionGoalFragment"
        android:label="Goal Analize and Description"
        tools:layout="@layout/fragment_description_goal" />
    <!--    <action-->
<!--        android:id="@+id/action_global_addGoalFragment"-->
<!--        app:destination="@id/addGoalFragment"-->
<!--        android:title="Add a new Goal"-->
<!--        app:popUpTo="@id/addGoalFragment" />-->
</navigation>