<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="355dp"
    android:layout_marginHorizontal="20dp"
    tools:context=".Login.SignupFragment">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_warning_email"
            android:layout_width="match_parent"
            android:textColor="@color/required_value"
            android:layout_height="0dp"
            android:text="" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/pass"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_warning_pass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textColor="@color/required_value"
            android:text="" />

        <EditText
            android:id="@+id/et_password_repeat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/edittext_background"
            android:ems="10"
            android:hint="@string/pass_repeat"
            android:inputType="textPassword"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/tv_warning_pass_rep"
            android:layout_width="match_parent"
            android:textColor="@color/required_value"
            android:layout_height="0dp"
            android:text="" />

        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/bt_signup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>


        <Button
            android:id="@+id/bt_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:enabled="false"
            android:text="@string/signup"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>