<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.AddGoalFragment">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:clickable="true"
        android:src="@drawable/done1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_descr_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/descr_goal"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_goal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descr_goal_hint"
                android:inputType="textMultiLine"
                android:maxLength="500"
                android:minHeight="48dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp" />

            <Button
                android:id="@+id/button_add_subtask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="15dp"
                android:text="@string/sub_goal_add"
                android:textColor="@color/white"
                android:backgroundTint="@color/md_theme_dark_primaryContainer"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <Switch
                android:id="@+id/sw_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:minHeight="48dp"
                android:text="@string/repeatable"
                android:textSize="20sp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_missing"
                    android:minHeight="48dp"
                    android:text="" />

                <ImageButton
                    android:id="@+id/bt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/underline_cansel"
                    android:src="@android:drawable/ic_menu_today" />

            </LinearLayout>

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="100dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

