<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.DescriptionGoalFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_descr_goal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="15dp"
                android:text="@string/here_is_your_goal"
                android:textSize="18sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/et_goal"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/underline_cansel"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:gravity="start|top"
                android:hint="@string/goal_here"
                android:maxLength="1000"
                android:minHeight="48dp" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/bt_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/underline_cansel"
                    android:src="@android:drawable/ic_menu_today" />

                <EditText
                    android:id="@+id/et_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/date_missing"
                    android:minHeight="48dp"
                    android:text="" />

                <View
                    android:id="@+id/divider3"
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:background="?android:attr/listDivider" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="0"
                    android:src="@android:drawable/ic_menu_rotate" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="TextView"
                    android:textSize="18sp"/>
            </LinearLayout>

            <View
                android:id="@+id/divider1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="5dp"
                android:background="?android:attr/listDivider" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/RecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="10dp" />


            <TextView
                android:id="@+id/et_analize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="50dp"
                android:background="@drawable/edittext_background"
                android:ems="10"
                android:hint="@string/analizing"
                android:gravity="start|top"
                android:minHeight="48dp"
                android:focusable="false"
                android:focusableInTouchMode="false"/>

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

